{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 13,
  "lineage": "76c9d78d-9d09-738c-db2a-4933eace0527",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-050c78efa486a0196",
            "arn": "arn:aws:ec2:ap-south-1:031133711437:instance/i-0631247f13b57ca83",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0631247f13b57ca83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "django-devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-041daec5f32de6a1e"
              }
            ],
            "primary_network_interface_id": "eni-041daec5f32de6a1e",
            "private_dns": "ip-10-0-1-27.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.27",
            "public_ip": "65.0.76.99",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07bb20e6e49fff0fc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06430ce6585cc1ce7",
            "tags": {
              "Name": "django-devops-ec2-v2"
            },
            "tags_all": {
              "Name": "django-devops-ec2-v2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009c0eaaa6153ad37"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "i-0631247f13b57ca83",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.ubuntu_ami"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031133711437:internet-gateway/igw-09f6c844ad8014cc3",
            "id": "igw-09f6c844ad8014cc3",
            "owner_id": "031133711437",
            "region": "ap-south-1",
            "tags": {
              "Name": "django-devops-igw"
            },
            "tags_all": {
              "Name": "django-devops-igw"
            },
            "vpc_id": "vpc-0b044649f9d7dbd0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "igw-09f6c844ad8014cc3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031133711437:route-table/rtb-0df663db05e148414",
            "id": "rtb-0df663db05e148414",
            "owner_id": "031133711437",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f6c844ad8014cc3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "django-devops-public-rt"
            },
            "tags_all": {
              "Name": "django-devops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b044649f9d7dbd0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "rtb-0df663db05e148414",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055f8c19054ce2555",
            "region": "ap-south-1",
            "route_table_id": "rtb-0df663db05e148414",
            "subnet_id": "subnet-06430ce6585cc1ce7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "rtbassoc-055f8c19054ce2555",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031133711437:security-group/sg-009c0eaaa6153ad37",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009c0eaaa6153ad37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Django",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "157.51.54.16/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "django-devops-sg",
            "name_prefix": "",
            "owner_id": "031133711437",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "django-devops-sg"
            },
            "tags_all": {
              "Name": "django-devops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b044649f9d7dbd0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "sg-009c0eaaa6153ad37",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031133711437:subnet/subnet-06f4b447e5829514e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f4b447e5829514e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031133711437",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "django-devops-private-subnet"
            },
            "tags_all": {
              "Name": "django-devops-private-subnet"
            },
            "vpc_id": "vpc-0b044649f9d7dbd0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "subnet-06f4b447e5829514e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031133711437:subnet/subnet-06430ce6585cc1ce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06430ce6585cc1ce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031133711437",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "django-devops-public-subnet"
            },
            "tags_all": {
              "Name": "django-devops-public-subnet"
            },
            "vpc_id": "vpc-0b044649f9d7dbd0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "subnet-06430ce6585cc1ce7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031133711437:vpc/vpc-0b044649f9d7dbd0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc6b579300ee3c7c",
            "default_route_table_id": "rtb-0c459500ca7d905b3",
            "default_security_group_id": "sg-0e892589342a536d3",
            "dhcp_options_id": "dopt-0320541afa1681d8c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b044649f9d7dbd0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c459500ca7d905b3",
            "owner_id": "031133711437",
            "region": "ap-south-1",
            "tags": {
              "Name": "django-devops-vpc"
            },
            "tags_all": {
              "Name": "django-devops-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031133711437",
            "id": "vpc-0b044649f9d7dbd0b",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}